# device-manager

./: CMakeLists.txt  README.md  project.config
docs/: doxyfile.in  mainpage.dox
src/: CMakeLists.txt  console.c  console.h  device_manager.c  device_manager.h  device_manager_ubus.c  fdm_common.h  fdm_get_client_list.c  fdm_hmac.c  fdm_hmac.h  fdm_licensee_verification.c  fdm_licensee_verification.h  fdm_log.h  fdm_provision_constrained.c  fdm_provision_constrained.h  fdm_register.c  fdm_register.h  fdm_server_session.c  fdm_server_session.h  fdm_subscribe.c  fdm_subscribe.h  flow_device_manager.c  flow_device_manager.h  flow_device_manager_ubus.c  main.c  onboarding.c  onboarding.h  utils.c  utils.h
